<resources>
    <string name="app_name">Mr.Pantomime</string>
    <string name="pravila_igre"><b><i>PRAVILA IGRE</i></b></string>
    <string name="chk_text">text</string>
    <string name="tvTeam1_text">Team 1</string>
    <string name="pravila1">\n<b><i>POINTS</i></b>\nFor every word that was guessed correctly you get one point, the goal is to demonstrate your teammates displayed words and them to guess as soon as possible, because each 20 seconds remaining means 1 point more.\n \n<b><i>TIME</i></b>\nWhen all 5 words are guessed correctly timing stops, by pressing the button \"NEXT\", bonus points for the remaining time are being added to the total score.\n\n<b><i>WINNER</i></b>\nThe winner is the one who gets to the selected result first, considering that team 1 always starts first, so team 2 always has a chance for catching up <i>\"eg. the selected result is 10, team 1 gets right at the beginning a maximum of 13 points, so of course team 2 will get the chance to catch up\"</i>, and if the results are equal there will be \"extra - time\", ie. \"golden goal\", who scores more points over the last round, wins.</string>
    <string name="pravila2">\n<b><i>POINTS</i></b>\nFor every word that was guessed correctly you get one point, the goal is to demonstrate your teammates displayed words and them to guess as soon as possible, because each 20 seconds remaining means 1 point more.\n \n<b><i>TIME</i></b>\nWhen all 5 words are guessed correctly timing stops, by pressing the button \"NEXT\", bonus points for the remaining time are being added to the total score.\n\n<b><i>WINNER</i></b>\nThe winner is the one who gets to the selected result first, considering that team 1 always starts first, so team 2 always has a chance for catching up <i>\"eg. the selected result is 10, team 1 gets right at the beginning a maximum of 13 points, so of course team 2 will get the chance to catch up\"</i>, and if the results are equal there will be \"extra - time\", ie. \"golden goal\", who scores more points over the last round, wins.\n\n<i>p.s. your time is running as you're reading this</i> "</string>
    <string name="table_name">db_words.db</string>
    <string name="tvTeam2_text">Team 2</string>
    <string name="tvTeam2Score_text">0</string>
    <string name="tvTeam1Score_text">0</string>
    <string name="tvClock_text">00:00</string>
    <string name="btnNext_text">Next</string>
    <string name="ekipa1_pobjeda">Congratulations to team 1 on victory</string>
    <string name="btnStart_text">Start</string>
    <string name="etResult_hint">10 &#8212; 60</string>
    <string name="btnDialogClose_text">Close</string>
    <string name="btnStartToastMsg">Enter the number between 10 and 60</string>
    <string name="tvTypeInResult_text">Enter the score you want to play</string>
    <string name="tvAppName_text">Mr. Pantomime</string>
    <string name="onBackPressed_text">Exit the game by pressing \"Home\" button!</string>
    <string name="tvClock_setText">00:00</string>
    <string name="tvNoteTxt_congzTeam1Text">Congratulations to Team 1 on winning!</string>
    <string name="tvNoteTxt_congzTeam2Txt">Congratulations to Team 2 on winning!</string>
    <string name="tvNoteTxt_team2playingTxt">Next up, Team 2</string>
    <string name="tvNoteTxt_team1playingTxt">Next up, Team 1</string>

</resources>
