<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="dejan.petrovic.hr.mrpantomime.MainActivity">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="@dimen/ivLogo_layoutWidth"
        android:layout_height="@dimen/ivLogo_layoutHeight"
        android:layout_marginStart="@dimen/ivLogo_marginStart"
        android:layout_marginEnd="@dimen/ivLogo_marginEnd"
        android:src="@drawable/s1223"
        android:visibility="visible"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintLeft_toLeftOf="@+id/tvTypeInResult"
        app:layout_constraintRight_toRightOf="@+id/tvTypeInResult"
        app:layout_constraintTop_toBottomOf="@+id/tvAppName"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/btnInfo"
        android:layout_width="@dimen/btnInfo_layoutWidth"
        android:layout_height="@dimen/btnInfo_layoutHeight"
        android:background="@drawable/ic_action_name3"
        android:layout_marginTop="@dimen/btnInfo_layoutMarginTop"
        android:layout_marginBottom="@dimen/btnInfo_layoutMarginBottom"
        android:layout_marginStart="@dimen/btnInfo_layoutMarginStart"
        android:layout_marginEnd="@dimen/btnInfo_layoutMarginEnd"
        app:layout_constraintVertical_bias="0.002"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="1.0" />

    <Button
        android:id="@+id/btnStart"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="@dimen/btnStart_layoutWidth"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/btnStart_layoutMarginBottom"
        android:layout_marginTop="@dimen/btnStart_layoutMarginTop"
        android:background="@android:color/holo_blue_dark"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/btnStart_text"
        android:textSize="@dimen/btnStart_textSize"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.654"
        app:layout_constraintTop_toBottomOf="@+id/etResult"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"/>


    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/tvAppName_marginBottom"
        android:layout_marginEnd="@dimen/tvAppName_marginEnd"
        android:layout_marginStart="@dimen/tvAppName_marginStart"
        android:layout_marginTop="@dimen/tvAppName_marginTop"
        android:fontFamily="casual"
        android:lineSpacingExtra="@dimen/tvAppName_lineSpacingExtra"
        android:text="@string/tvAppName_text"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textColor="@color/textPrimary"
        android:textSize="@dimen/tvAppName_textSize"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintLeft_toLeftOf="@+id/tvTypeInResult"
        app:layout_constraintRight_toRightOf="@+id/tvTypeInResult"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.067"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"/>

    <TextView
        android:id="@+id/tvTypeInResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/tvTypeInResult_layoutWidth"
        android:layout_marginEnd="@dimen/tvTypeInResult_marginEnd"
        android:layout_marginTop="@dimen/tvTypeInResult_layoutMarginTop"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/tvTypeInResult_text"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/textSecondary"
        android:textSize="@dimen/tvTypeInResult_textSize"
        app:layout_constraintBottom_toTopOf="@+id/btnStart"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintLeft_toLeftOf="@+id/btnStart"
        app:layout_constraintRight_toRightOf="@+id/btnStart"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/etResult"
        android:layout_width="@dimen/etResult_layoutWidth"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/etResult_layoutMarginBottom"
        android:layout_marginTop="@dimen/etResult_layoutMarginTop"
        android:layout_marginStart="@dimen/etResult_layoutMarginStart"
        android:layout_marginEnd="@dimen/etResult_layoutMarginEnd"
        android:ems="10"
        android:fontFamily="sans-serif-smallcaps"
        android:hint="@string/etResult_hint"
        android:maxLength="2"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/textSecondary"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/tvTypeInResult"
        app:layout_constraintRight_toRightOf="@+id/tvTypeInResult"
        app:layout_constraintTop_toBottomOf="@+id/tvTypeInResult"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"/>

</android.support.constraint.ConstraintLayout>
