<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    android:background="@color/colorPrimaryDark"
    tools:context="dejan.petrovic.hr.mrpantomime.activity.GameActivity">

    <Button
        android:id="@+id/btnHome"
        android:layout_width="@dimen/btnHome_layoutWidth"
        android:layout_height="@dimen/btnHome_layoutHeight"
        android:background="@drawable/ic_action_name2"
        android:onClick="goToMainActivity"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnInfo"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <CheckBox
        android:id="@+id/chk1"
        style="@style/Widget.AppCompat.CompoundButton.CheckBox"
        android:layout_width="@dimen/chk_width"
        android:layout_height="@dimen/chk_height"
        android:layout_marginBottom="@dimen/chk_marginBottom"
        android:layout_marginEnd="@dimen/chk_marginEnd"
        android:layout_marginStart="@dimen/chk_layoutMarginStart"
        android:layout_marginTop="@dimen/chk_layoutMarginTop"
        android:background="@android:drawable/divider_horizontal_textfield"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:buttonTint="@android:color/holo_orange_light"
        android:checked="false"
        android:duplicateParentState="false"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/chk_text"
        android:textColor="@android:color/background_light"
        android:textColorLink="@android:color/background_light"
        android:textSize="@dimen/chk_textSize"
        android:paddingEnd="@dimen/chk_paddingEnd"
        android:paddingStart="@dimen/chk_paddingStart"
        app:layout_constraintBottom_toTopOf="@+id/chk2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <CheckBox
        android:id="@+id/chk2"
        style="@style/Widget.AppCompat.CompoundButton.CheckBox"
        android:layout_width="@dimen/chk_width"
        android:layout_height="@dimen/chk_height"
        android:layout_marginBottom="@dimen/chk_marginBottom"
        android:layout_marginEnd="@dimen/chk_marginEnd"
        android:layout_marginStart="@dimen/chk_layoutMarginStart"
        android:layout_marginTop="@dimen/chk_layoutMarginTop"
        android:background="@android:drawable/divider_horizontal_textfield"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:buttonTint="@android:color/holo_orange_light"
        android:checked="false"
        android:duplicateParentState="false"
        android:fontFamily="sans-serif-smallcaps"
        android:keepScreenOn="false"
        android:text="@string/chk_text"
        android:textColor="@android:color/background_light"
        android:textColorLink="@android:color/background_light"
        android:textSize="@dimen/chk_textSize"
        android:paddingEnd="@dimen/chk_paddingEnd"
        android:paddingStart="@dimen/chk_paddingStart"
        app:layout_constraintBottom_toTopOf="@+id/chk3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/chk1"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <CheckBox
        android:id="@+id/chk3"
        style="@style/Widget.AppCompat.CompoundButton.CheckBox"
        android:layout_width="@dimen/chk_width"
        android:layout_height="@dimen/chk_height"
        android:layout_marginBottom="@dimen/chk_marginBottom"
        android:layout_marginEnd="@dimen/chk_marginEnd"
        android:layout_marginStart="@dimen/chk_layoutMarginStart"
        android:layout_marginTop="@dimen/chk_layoutMarginTop"
        android:background="@android:drawable/divider_horizontal_textfield"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:buttonTint="@android:color/holo_orange_light"
        android:checked="false"
        android:duplicateParentState="false"
        android:fontFamily="sans-serif-smallcaps"
        android:keepScreenOn="false"
        android:text="@string/chk_text"
        android:textColor="@android:color/background_light"
        android:textColorLink="@android:color/background_light"
        android:textSize="@dimen/chk_textSize"
        android:paddingEnd="@dimen/chk_paddingEnd"
        android:paddingStart="@dimen/chk_paddingStart"
        app:layout_constraintBottom_toTopOf="@+id/chk4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/chk2"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <CheckBox
        android:id="@+id/chk4"
        style="@style/Widget.AppCompat.CompoundButton.CheckBox"
        android:layout_width="@dimen/chk_width"
        android:layout_height="@dimen/chk_height"
        android:layout_marginBottom="@dimen/chk_marginBottom"
        android:layout_marginEnd="@dimen/chk_marginEnd"
        android:layout_marginStart="@dimen/chk_layoutMarginStart"
        android:layout_marginTop="@dimen/chk_layoutMarginTop"
        android:background="@android:drawable/divider_horizontal_textfield"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:buttonTint="@android:color/holo_orange_light"
        android:checked="false"
        android:duplicateParentState="false"
        android:fontFamily="sans-serif-smallcaps"
        android:keepScreenOn="false"
        android:text="@string/chk_text"
        android:textColor="@android:color/background_light"
        android:textColorLink="@android:color/background_light"
        android:textSize="@dimen/chk_textSize"
        android:paddingEnd="@dimen/chk_paddingEnd"
        android:paddingStart="@dimen/chk_paddingStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.698"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <CheckBox
        android:id="@+id/chk5"
        android:layout_width="@dimen/chk_width"
        android:layout_height="@dimen/chk_height"
        android:layout_marginBottom="@dimen/chk_marginBottom"
        android:layout_marginEnd="@dimen/chk_marginEnd"
        android:layout_marginStart="@dimen/chk_layoutMarginStart"
        android:layout_marginTop="@dimen/chk_layoutMarginTop"
        android:background="@android:drawable/divider_horizontal_textfield"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:buttonTint="@android:color/holo_orange_light"
        android:checked="false"
        android:duplicateParentState="false"
        android:fontFamily="sans-serif-smallcaps"
        android:keepScreenOn="false"
        android:text="@string/chk_text"
        android:textColor="@android:color/background_light"
        android:textColorLink="@android:color/background_light"
        android:textSize="@dimen/chk_textSize"
        android:paddingEnd="@dimen/chk_paddingEnd"
        android:paddingStart="@dimen/chk_paddingStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chk4"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <TextView
        android:id="@+id/tvTeam2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/tvTeam2_layoutMarginStart"
        android:layout_marginEnd="@dimen/tvTeam2_layoutMarginEnd"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/tvTeam2_text"
        android:textAlignment="center"
        android:textColor="@color/textSecondary"
        android:textSize="@dimen/tvTeam2_textSize"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvTeam1"
        app:layout_constraintHorizontal_bias="0.96"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <TextView
        android:id="@+id/tvTeam1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="?android:attr/colorButtonNormal"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/tvTeam1_text"
        android:textAlignment="center"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="@dimen/tvTeam1_textSize"
        app:layout_constraintBottom_toTopOf="@+id/chk1"
        app:layout_constraintHorizontal_bias="0.106"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnHome"
        app:layout_constraintVertical_bias="0.307"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <TextView
        android:id="@+id/tvTeam2Score"
        android:layout_width="@dimen/tvTeam2Score_layoutWidth"
        android:layout_height="@dimen/tvTeam2Score_layoutHeight"
        android:layout_marginLeft="@dimen/tvTeam2Score_layoutMarginLeft"
        android:enabled="false"
        android:fontFamily="sans-serif-smallcaps"
        android:soundEffectsEnabled="false"
        android:text="@string/tvTeam2Score_text"
        android:textAlignment="center"
        android:textColor="@color/textSecondary"
        android:textSize="@dimen/tvTeam2Score_textSize"
        android:visibility="visible"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvTeam1Score"
        app:layout_constraintHorizontal_bias="0.875"
        app:layout_constraintLeft_toLeftOf="@+id/tvTeam2"
        app:layout_constraintRight_toRightOf="@+id/tvTeam2"
        tools:ignore="RtlHardcoded"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <TextView
        android:id="@+id/tvTeam1Score"
        android:layout_width="@dimen/tvTeam1Score_layoutWidth"
        android:layout_height="@dimen/tvTeam1Score_layoutHeight"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="@dimen/tvTeam1Score_layoutMarginLeft"
        android:layout_marginRight="@dimen/tvTeam1Score_layoutMarginRight"
        android:layout_marginTop="@dimen/tvTeam1Score_layoutMarginTop"
        android:enabled="false"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/tvTeam1Score_text"
        android:textAlignment="center"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="@dimen/tvTeam1Score_textSize"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/tvTeam2Score"
        app:layout_constraintLeft_toLeftOf="@+id/tvTeam1"
        app:layout_constraintRight_toRightOf="@+id/tvTeam1"
        app:layout_constraintTop_toBottomOf="@+id/tvTeam1"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="RtlHardcoded"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <TextView
        android:id="@+id/tvClock"
        android:layout_width="@dimen/tvClock_layoutWidth"
        android:layout_height="@dimen/tvClock_layoutHeight"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:drawable/checkbox_off_background"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/tvClock_text"
        android:textAlignment="center"
        android:textColor="@color/textPrimary"
        android:textSize="@dimen/tvClock_textSize"
        app:layout_constraintBottom_toBottomOf="@+id/tvTeam2Score"
        app:layout_constraintEnd_toStartOf="@+id/tvTeam2Score"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvTeam1Score"
        app:layout_constraintTop_toTopOf="@+id/tvTeam1"
        app:layout_constraintVertical_bias="0.384" />

    <Button
        android:id="@+id/btnNext"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/btnNext_layoutMarginStart"
        android:layout_marginEnd="@dimen/btnNext_layoutMarginEnd"
        android:layout_marginTop="@dimen/btnNext_layoutMarginTop"
        android:background="@android:color/transparent"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/btnNext_text"
        android:textAlignment="center"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="@dimen/btnNext_textSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.945" />

    <Button
        android:id="@+id/btnInfo"
        android:layout_width="@dimen/btnInfo_layoutWidth"
        android:layout_height="@dimen/btnInfo_layoutHeight"
        android:layout_marginTop="@dimen/btnInfo_layoutMarginTop"
        android:layout_marginBottom="@dimen/btnInfo_layoutMarginBottom"
        android:layout_marginStart="@dimen/btnInfo_layoutMarginStart"
        android:layout_marginEnd="@dimen/btnInfo_layoutMarginEnd"
        android:background="@drawable/ic_action_name3"
        app:layout_constraintVertical_bias="0.002"
        app:layout_constraintLeft_toRightOf="@+id/btnHome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="1.0" />

    <TextView
        android:id="@+id/tvNoteTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/tvNoteTxt_layoutMarginBottom"
        android:layout_marginStart="@dimen/tvNoteTxt_layoutMarginStart"
        android:layout_marginEnd="@dimen/tvNoteTxt_layouMarginEnd"
        android:layout_marginTop="@dimen/tvNoteTxt_layoutMarginTop"
        android:fontFamily="sans-serif-smallcaps"
        android:textAlignment="center"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="@dimen/tvNoteTxt_textSize"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
